[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ciphra"
version = "1.3.0"
description = "Local file security toolkit."
requires-python = ">=3.10"
dependencies = [
    "requests==2.33.1",
    "click==8.3.2",
    "rich==14.3.3",
    "questionary==2.0.1",
    "cryptography>=41.0.0",
]

[project.scripts]
ciphra = "ciphra:cli"

[tool.setuptools]
py-modules = ["ciphra", "config"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["utils"]
